--- a/gb/16/8/1/n8155877.md
+++ b/gb/16/8/1/n8155877.md
@@ -1,12 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/toehso392/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/toehso392/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/toehso392/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/toehso392/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/toehso392/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/toehso392/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/toehso392/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/toehso392/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/toehso392/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/toehso392/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/toehso392/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/toehso392/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/toehso392/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/toehso392/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/toehso392/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/toehso392/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/toehso392/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/toehso392/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/toehso392/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/toehso392/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/toehso392/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/toehso392/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/toehso392/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/toehso392/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/toehso392/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/toehso392/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/toehso392/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/toehso392/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/toehso392/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/toehso392/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/toehso392/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/toehso392/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/toehso392/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/toehso392/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/toehso392/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/toehso392/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/toehso392/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/toehso392/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/toehso392/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/toehso392/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/toehso392/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/toehso392/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/toehso392/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/toehso392/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/toehso392/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/toehso392/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/toehso392/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>台铁司机要喘口气  估减百班仍不够</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2016年08月01日讯】<ahref="https://github.com/toehso392/djy/blob/master/gb/tag/%E5%8F%B0%E9%93%81.md#1">台铁</a><ahref="https://github.com/toehso392/djy/blob/master/gb/tag/%E5%8F%B8%E6%9C%BA.md#1">司机</a>发起合法合<ahref="https://github.com/toehso392/djy/blob/master/gb/tag/%E4%BC%91%E5%81%87.md#1">休假</a><ahref="https://github.com/toehso392/djy/blob/master/gb/tag/%E8%BF%9E%E7%BD%B2.md#1">连署</a>，<ahref="https://github.com/toehso392/djy/blob/master/gb/tag/%E5%8F%B0%E9%93%81.md#1">台铁</a>工会理事长谢胜明今天说，台铁<ahref="https://github.com/toehso392/djy/blob/master/gb/tag/%E5%8F%B8%E6%9C%BA.md#1">司机</a>长期无法正常休假太疲累，需要喘口气，估计即使每天减100班仍不够。</p>
-<p>台铁司机员人力不足，这几年台铁增开的列车大幅成长，司机员常无法正常<ahref="https://github.com/toehso392/djy/blob/master/gb/tag/%E4%BC%91%E5%81%87.md#1">休假</a>，由司机员组成的火联会发起9月6日起，合法休假<ahref="https://github.com/toehso392/djy/blob/master/gb/tag/%E8%BF%9E%E7%BD%B2.md#1">连署</a>，台铁正设法与司机员沟通。</p>
+<p>【大纪元2016年08月01日讯】<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%8F%B0%E9%93%81.md#1">台铁</a><ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%8F%B8%E6%9C%BA.md#1">司机</a>发起合法合<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E4%BC%91%E5%81%87.md#1">休假</a><ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%BF%9E%E7%BD%B2.md#1">连署</a>，<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%8F%B0%E9%93%81.md#1">台铁</a>工会理事长谢胜明今天说，台铁<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%8F%B8%E6%9C%BA.md#1">司机</a>长期无法正常休假太疲累，需要喘口气，估计即使每天减100班仍不够。</p>
+<p>台铁司机员人力不足，这几年台铁增开的列车大幅成长，司机员常无法正常<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E4%BC%91%E5%81%87.md#1">休假</a>，由司机员组成的火联会发起9月6日起，合法休假<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%BF%9E%E7%BD%B2.md#1">连署</a>，台铁正设法与司机员沟通。</p>
 <p>台铁工会今天上午召开常务理事会，会前谢胜明接受访问时说，这几年台铁为满足各方需求，增班太多，但人力却未相对增加，司机员常无法正常请假，工作太疲累，需要喘口气，减班势在必行。</p>
 <p>谢胜明说，台铁减班一定要有感，至少清晨及深夜利用率不高的子列车要砍掉，提高备用人力，让司机员能正常休假，估计减100班可能都还不够，工会5日将开理事会，盼台铁提出合理减班数字。</p>
 <p>台铁方面表示，今天起每天25班货运列车不定期停驶或并班，正与工会协商，希望8月、9月客运列车不受影响，10月改点时，再减效率不佳列车班次。（转自中央社）</p>
@@ -15,48 +15,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/toehso392/djy/blob/master/gb/16/7/5/n8068309.md#1">诉求获善意回应 台铁工会暂停集体休假</a></li>
-<li><a href="https://github.com/toehso392/djy/blob/master/gb/16/7/14/n8098974.md#1">劳工休假新规 台铁拟停部分加班车</a></li>
-<li><a href="https://github.com/toehso392/djy/blob/master/gb/16/7/15/n8102482.md#1">台铁拟8月休假减班 政院请交部协调</a></li>
-<li><a href="https://github.com/toehso392/djy/blob/master/gb/16/7/26/n8139500.md#1">台铁驾驶吁日减200班 9月起拟依法休假</a></li>
-<li><a href="https://github.com/toehso392/djy/blob/master/gb/20/9/1/n12372533.md#1">查扣中国抽砂运砂船 澎湖地检署16日公开拍卖</a></li>
-<li><a href="https://github.com/toehso392/djy/blob/master/gb/20/8/31/n12370313.md#1">基隆关八里分关出包 海关：拟定3项改善</a></li>
-<li><a href="https://github.com/toehso392/djy/blob/master/gb/20/8/31/n12369538.md#1">9/1路口大执法 未礼让行人最高罚3600元</a></li>
-<li><a href="https://github.com/toehso392/djy/blob/master/gb/20/8/29/n12365911.md#1">馆长遭枪击 医师：恢复良好 已可边换药边开玩笑</a></li>
-<li><a href="https://github.com/toehso392/djy/blob/master/gb/20/8/28/n12363459.md#1">馆长遭枪击后手术顺利 医院：有机会一周后出院</a></li>
-<li><a href="https://github.com/toehso392/djy/blob/master/gb/20/8/28/n12363217.md#1">馆长遭枪击 侯友宜：责无旁贷尽速厘清真相</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/7/5/n8068309.md#1">诉求获善意回应 台铁工会暂停集体休假</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/7/14/n8098974.md#1">劳工休假新规 台铁拟停部分加班车</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/7/15/n8102482.md#1">台铁拟8月休假减班 政院请交部协调</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/7/26/n8139500.md#1">台铁驾驶吁日减200班 9月起拟依法休假</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13752851.md#1">失联移工无照驾车闯红灯肇逃 家属忧求偿无门</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13752830.md#1">离婚男求复合每天监视盯梢前妻 台东警受理首件跟骚案</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/2/n13751047.md#1">船东欠钱联利轮遭假扣押 船员挂布条求助</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/2/n13751011.md#1">杜绝装潢蟑螂 立委吁政府改善制度</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/2/n13750987.md#1">6/2记账士节 记账士捐赠快筛关怀弱势</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/31/n13749078.md#1">台AT-3教练机高雄坠毁 飞官徐大钧殉职</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/4/n10829782.md#1" target="_blank">许茹：十月逾五十次地震 天象示警情势危</a></li><li><a href="https://github.com/toehso392/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/7/n10284211.md#1" target="_blank">中国良心教师们的故事（2）</a></li>
+<li><a href="https://github.com/ychojm359/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/30/n10101129.md#1" target="_blank">林辉：沈阳雪堆中千余苏军尸体背后的暴行</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/28/n11285941.md#1" target="_blank">美议员颁发国会特别褒奖 感谢法轮大法</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/neniss317/djy/blob/master/gb/20/8/23/n12352151.md#1">清朝官场惊魂奇闻 原是前世埋下祸根</a></li>
-<li><a href="https://github.com/neniss317/djy/blob/master/gb/20/8/28/n12363346.md#1">拯救垂死的鱼 一群猪因善行成为网红</a></li>
-<li><a href="https://github.com/neniss317/djy/blob/master/gb/20/8/29/n12366370.md#1">【薇羽看世间】FBI解密：来自金星的科学家</a></li>
-<li><a href="https://github.com/neniss317/djy/blob/master/gb/20/8/26/n12358494.md#1">神奇的玛雅金字塔 你拍手它传回鸟叫声</a></li>
-<li><a href="https://github.com/neniss317/djy/blob/master/gb/20/8/10/n12318960.md#1">【命理】什么时候能找到男朋友？</a></li>
-<li><a href="https://github.com/neniss317/djy/blob/master/gb/20/8/31/n12370693.md#1">【重播】白宫简报会：谴责暴乱 疫情减缓</a></li>
-<li><a href="https://github.com/neniss317/djy/blob/master/gb/20/8/31/n12370992.md#1">【新闻看点】捷克亲台王毅恐吓 欧洲或掀仿效风</a></li>
-<li><a href="https://github.com/neniss317/djy/blob/master/gb/20/8/31/n12371068.md#1">【时事纵横】王毅威胁遭反弹 川普民调领先</a></li>
-<li><a href="https://github.com/neniss317/djy/blob/master/gb/20/8/29/n12366756.md#1">【新闻看点】川普支持率飙升 拜登不敢辩论？</a></li>
-<li><a href="https://github.com/neniss317/djy/blob/master/gb/20/8/30/n12367461.md#1">为什么以色列的F-35战机与他国不同？</a></li>
-<li><a href="https://github.com/neniss317/djy/blob/master/gb/20/8/28/n12362953.md#1">B-21隐形轰炸机明年首飞 哪些技术受瞩目</a></li>
-<li><a href="https://github.com/neniss317/djy/blob/master/gb/20/8/30/n12368618.md#1">当妈后首晒女儿动态 唐嫣配文：宝贝的宝贝</a></li>
-<li><a href="https://github.com/neniss317/djy/blob/master/gb/20/8/30/n12368200.md#1">移民进度？黄秋生宣布搬离住香港20年旧居</a></li>
-<li><a href="https://github.com/neniss317/djy/blob/master/gb/20/8/30/n12368476.md#1">为倪妮忍气吞声抱不平 章子怡怒斥代拍行为</a></li>
-<li><a href="https://github.com/neniss317/djy/blob/master/gb/20/8/29/n12366340.md#1">《TENET天能》影评：烧脑的剧情 也能兼顾电影娱乐性</a></li>
-<li><a href="https://github.com/neniss317/djy/blob/master/gb/20/8/31/n12369005.md#1">郭富城扮失意者 影评：他的眼神真的令人心痛</a></li>
-<li><a href="https://github.com/neniss317/djy/blob/master/gb/20/8/30/n12367461.md#1">为什么以色列的F-35战机与他国不同？</a></li>
-<li><a href="https://github.com/neniss317/djy/blob/master/gb/20/8/30/n12367367.md#1">美国科学家一天飞进飓风5次 拍下罕见画面</a></li>
-<li><a href="https://github.com/neniss317/djy/blob/master/gb/20/8/28/n12365218.md#1">3秒止痛！头痛有5大原因 中医妙招速救</a></li>
-<li><a href="https://github.com/neniss317/djy/blob/master/gb/20/8/31/n12369533.md#1">美国海军最小船舰迷你可爱 不到6米长</a></li>
-<li><a href="https://github.com/neniss317/djy/blob/master/gb/20/8/26/n12359603.md#1">中暑怎么办？教你正确急救、抗暑方法</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11949573.md#1">武汉现“危险信号”疫情将再次爆发？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11948137.md#1">美军散毒？中共网军“铁证视频”被揭造假</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11948263.md#1">【现场视频】武汉居民求助 官称：死你一个不少</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11947742.md#1">梁朝伟拍陆片《猎狐行动》搭档女主确诊染疫</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/toehso392/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/toehso392/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/8/1/n8155877.htm">台铁司机要喘口气  估减百班仍不够</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/8/1/n8155877.htm">台铁司机要喘口气  估减百班仍不够</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/toehso392/djy/blob/master/gb/16/8/1/n8155877.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/toehso392/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/toehso392/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/toehso392/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/toehso392/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/toehso392/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/toehso392/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/toehso392/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/toehso392/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/toehso392/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/toehso392/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/toehso392/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/toehso392/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/toehso392/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/toehso392/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/toehso392/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/toehso392/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/toehso392/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/toehso392/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/toehso392/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/toehso392/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/toehso392/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/toehso392/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/toehso392/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/toehso392/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/toehso392/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/toehso392/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/toehso392/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/toehso392/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/toehso392/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/toehso392/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/toehso392/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/toehso392/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/toehso392/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/toehso392/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/toehso392/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/toehso392/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/toehso392/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/toehso392/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/toehso392/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/toehso392/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/toehso392/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/toehso392/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/toehso392/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/toehso392/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/toehso392/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/toehso392/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/toehso392/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/toehso392/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/16/8/1/n8155877.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
